--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
 		<java.version>1.8</java.version>
 		<shiro.version>1.4.0</shiro.version>
 		<mybatis.version>1.3.1</mybatis.version>
-		<druid.version>1.0.9</druid.version>
+		<druid.version>1.1.10</druid.version>
+		<mysql.connector.version>8.0.11</mysql.connector.version>
 	</properties>
 
 	<dependencies>
@@ -49,11 +50,6 @@
 			<version>${shiro.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.shiro</groupId>
-			<artifactId>shiro-core</artifactId>
-			<version>${shiro.version}</version>
-		</dependency>
-		<dependency>
 			<!--mybatis  -->
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
@@ -62,7 +58,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+			<!--<version>${mysql.connector.version}</version>-->
+			<scope>runtime</scope>
         </dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
