--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # darabase
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql:/localhost:3306/test?characterEncodging=UTF-8
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode-true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.data.cassandra.password=123123
-
+spring.datasource.password=123123
+#serverTimezone
 #mybatis
 mybatis.mapper-locations=mapper/*.xml
 mybatis.type-aliases-package=com.example.demo.model
